syntax ="proto3";

package com.laiyz.proto;

option optimize_for = SPEED;
option java_package = "com.laiyz.proto";
option java_outer_classname="SenderMsg";

message Req{
    string id = 1;
    string cmd = 2;
    string filepath = 3;
    uint64 ts = 4;
    uint64 accessFilePosition = 5;
}

message Rsp{
    string id = 1;
    string cmd = 2;
    string filepath = 3;
    uint64 fileSize = 4;
    string checksum = 5;
    uint64 recvSize = 6;
    uint64 currRecvSize = 7;
    uint64 reqTs = 8;
    uint64 rspTs = 9;
    uint64 accessFilePosition = 10;
}


message PullRsp{

    string id = 1;
    string cmd = 2;
    string srcFilePath = 3;
    string destFilePath = 4;
    uint64 fileSize = 5;
    string checksum = 6;
    uint64 chunkSize = 7;
    uint64 reqTs = 8;

}
